documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef short int SHORT;
typedef short int * LPSHORT;
typedef long int LONG;
typedef long int * LPLONG;

P42W32API HCARD __stdcall DRV429_HandleRegister(LPCSTR cardname,INT memval,INT ioval,INT irqval,INT drqval,LPVOID hAppWnd,USHORT uiRemovalMsg);

P42W32API ERRVAL __stdcall DRV429_HandleUnregister(HCARD handleval);

P42W32API USHORT __stdcall DRV429_HighSpeed(USHORT value,HCARD handleval);

P42W32API USHORT __stdcall DRV429_ImageCycle(USHORT channel,HCARD handleval,USHORT addr);

P42W32API USHORT __stdcall DRV429_ImageFilt(USHORT labelval,USHORT sdi,USHORT channel,HCARD handleval,USHORT addr);

P42W32API USHORT __stdcall DRV429_ImageFrame(USHORT framenum,USHORT channel,HCARD handleval,USHORT addr);

P42W32API USHORT __stdcall DRV429_ImageGap(USHORT framenum,USHORT msgnum,USHORT channel,HCARD handleval,USHORT addr);

P42W32API USHORT __stdcall DRV429_ImageHeader(USHORT channel,HCARD handleval,USHORT addr);

P42W32API USHORT __stdcall DRV429_ImageLabelTable(USHORT channel,HCARD handleval,USHORT addr);

P42W32API USHORT __stdcall DRV429_ImageMsg(USHORT framenum,USHORT msgnum,USHORT channel,HCARD handleval,USHORT addr);

P42W32API USHORT __stdcall DRV429_ImageSDITable(USHORT labelval,USHORT channel,HCARD handleval,USHORT addr);

P42W32API INT __stdcall DRV429_In(HCARD handleval,INT addrval);

P42W32API USHORT __stdcall DRV429_InAccess(INT ctrval,HCARD handleval);

P42W32API USHORT __stdcall DRV429_InP(INT addr,HCARD handleval);

P42W32API ULONG __stdcall DRV429_InsFilt(USHORT labelval,USHORT sdival,USHORT channel,HCARD handleval);

P42W32API ULONG __stdcall DRV429_InsMsg(USHORT index,ULONG msgval,ULONG gapval,USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_IsOldBrd(HCARD handleval);

P42W32API USHORT __stdcall DRV429_IsRcv(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_IsXmit(USHORT channel,HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_KernBegin(LPVOID *vxdptr,LPCSTR cardname,INT memval,INT ioval,INT irqval,INT drqval);

P42W32API ERRVAL __stdcall DRV429_KernEnd(HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_KernGet(LPULONG memptr,LPULONG ioptr,HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_KernQuick(BOOL flag,HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_KernStatusEx(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);

P42W32API VOID __stdcall DRV429_KillSeq(HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_Load(LPCSTR filename,HCARD handleval);

P42W32API ULONG __stdcall DRV429_MakePtr(HCARD handleval,INT offval);

P42W32API LPSTR __stdcall DRV429_MantToAscii(LPSTR buf,LONG mant,SHORT exp);

P42W32API VOID __stdcall DRV429_MarkMem(HCARD handleval);

P42W32API ULONG __stdcall DRV429_Mask(ULONG dataval,INT cntval);

P42W32API VOID __stdcall DRV429_MaxMant(LPLONG mant,LPSHORT exp);

P42W32API ULONG __stdcall DRV429_Mod(ULONG moda,ULONG modb);

P42W32API ULONG __stdcall DRV429_Mul(ULONG mula,ULONG mulb);

P42W32API SHORT __stdcall DRV429_NameCmp(LPSTR str1,LPSTR str2);

P42W32API ULONG __stdcall DRV429_NameToAddr(LPSTR name,HCARD handleval,LPSTR filename);

P42W32API VOID __stdcall DRV429_NormalMant(LPLONG mant,LPSHORT exp);

P42W32API HCARD __stdcall DRV429_Open(INT cardnum);

P42W32API USHORT __stdcall DRV429_OscClk(USHORT oscval,HCARD handleval);

P42W32API VOID __stdcall DRV429_Out(HCARD handleval,INT addrval,INT value);

P42W32API VOID __stdcall DRV429_OutAccess(INT ctrval,INT regval,HCARD handleval);

P42W32API VOID __stdcall DRV429_OutP(INT addr,INT value,HCARD handleval);

P42W32API USHORT __stdcall DRV429_Parity(USHORT value,HCARD handleval);

P42W32API INT __stdcall DRV429_PeekB(INT addr,HCARD handleval);

P42W32API ULONG __stdcall DRV429_PeekL(INT addr,HCARD handleval);

P42W32API INT __stdcall DRV429_PeekW(INT addr,HCARD handleval);

P42W32API VOID __stdcall DRV429_PokeB(INT addr,HCARD handleval,INT value);

P42W32API VOID __stdcall DRV429_PokeeB(INT addr,HCARD handleval,INT value);

P42W32API VOID __stdcall DRV429_PokeeL(INT addr,HCARD handleval,ULONG value);

P42W32API VOID __stdcall DRV429_PokeeW(INT addr,HCARD handleval,INT value);

P42W32API VOID __stdcall DRV429_PokeL(INT addr,HCARD handleval,ULONG value);

P42W32API VOID __stdcall DRV429_PokeW(INT addr,HCARD handleval,INT value);

P42W32API VOID __stdcall DRV429_Pulse(HCARD handleval);

P42W32API ULONG __stdcall DRV429_PutBCDData(ULONG msg,ULONG value,USHORT msb,USHORT lsb);

P42W32API ULONG __stdcall DRV429_PutBCDMant(ULONG msg,ULONG value,USHORT sigdig,USHORT sign);

P42W32API ULONG __stdcall DRV429_PutBCDSign(ULONG msg,USHORT sign);

P42W32API ULONG __stdcall DRV429_PutBCDSSM(ULONG msg,USHORT value);

P42W32API ULONG __stdcall DRV429_PutBCDVal(LPSTR buf,ULONG msg,USHORT sigdig,LPSTR resolstr);

P42W32API ULONG __stdcall DRV429_PutBNRData(ULONG msg,ULONG value,USHORT msb,USHORT lsb,USHORT twos);

P42W32API ULONG __stdcall DRV429_PutBNRMant(ULONG msg,ULONG value,USHORT sigbit,USHORT twos);

P42W32API ULONG __stdcall DRV429_PutBNRSign(ULONG msg,USHORT sign);

P42W32API ULONG __stdcall DRV429_PutBNRSSM(ULONG msg,USHORT value);

P42W32API ULONG __stdcall DRV429_PutBNRVal(LPSTR buf,ULONG msg,USHORT sigbit,LPSTR resolstr);

P42W32API ULONG __stdcall DRV429_PutFldData(ULONG msgval,ULONG dataval);

P42W32API ULONG __stdcall DRV429_PutFldLabel(ULONG msgval,INT labelval);

P42W32API ULONG __stdcall DRV429_PutFldSDI(ULONG msgval,INT sdival);

P42W32API ULONG __stdcall DRV429_PutFldValue(ULONG msgval,ULONG newval,INT startbit,INT endbit);

P42W32API ULONG __stdcall DRV429_RandL(VOID);

P42W32API ULONG __stdcall DRV429_RdClk(HCARD handleval);

P42W32API USHORT __stdcall DRV429_RdFreePtr(HCARD handleval);

P42W32API USHORT __stdcall DRV429_RdHeapEnd(HCARD handleval);

P42W32API USHORT __stdcall DRV429_RdHeapStart(HCARD handleval);

P42W32API INT __stdcall DRV429_RdOpt(HCARD handleval);

P42W32API VOID __stdcall DRV429_RdSeq(HCARD handleval,LPUSHORT bottom,LPUSHORT top,LPUSHORT tail,LPUSHORT head);

P42W32API BYTE __stdcall DRV429_ReadB(INT addrval,HCARD handleval);