documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32NET.VB

    Public Declare Function DRV429_HandleRegister Lib "P42W32.DLL" Alias "_DRV429_HandleRegister@28" (ByVal cardname As String, ByVal memval As Integer, ByVal ioval As Integer, ByVal irqval As Integer, ByVal drqval As Integer, ByRef hAppWnd As Integer, ByVal uiRemovalMsg As Short) As Integer
    Public Declare Function DRV429_HandleUnregister Lib "P42W32.DLL" Alias "_DRV429_HandleUnregister@4" (ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_HighSpeed Lib "P42W32.DLL" Alias "_DRV429_HighSpeed@8" (ByVal value As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_ImageCycle Lib "P42W32.DLL" Alias "_DRV429_ImageCycle@12" (ByVal channel As Short, ByVal handleval As Integer, ByVal addr As Short) As Short
    Public Declare Function DRV429_ImageFilt Lib "P42W32.DLL" Alias "_DRV429_ImageFilt@20" (ByVal labelval As Short, ByVal sdi As Short, ByVal channel As Short, ByVal handleval As Integer, ByVal addr As Short) As Short
    Public Declare Function DRV429_ImageFrame Lib "P42W32.DLL" Alias "_DRV429_ImageFrame@16" (ByVal framenum As Short, ByVal channel As Short, ByVal handleval As Integer, ByVal addr As Short) As Short
    Public Declare Function DRV429_ImageGap Lib "P42W32.DLL" Alias "_DRV429_ImageGap@20" (ByVal framenum As Short, ByVal msgnum As Short, ByVal channel As Short, ByVal handleval As Integer, ByVal addr As Short) As Short
    Public Declare Function DRV429_ImageHeader Lib "P42W32.DLL" Alias "_DRV429_ImageHeader@12" (ByVal channel As Short, ByVal handleval As Integer, ByVal addr As Short) As Short
    Public Declare Function DRV429_ImageLabelTable Lib "P42W32.DLL" Alias "_DRV429_ImageLabelTable@12" (ByVal channel As Short, ByVal handleval As Integer, ByVal addr As Short) As Short
    Public Declare Function DRV429_ImageMsg Lib "P42W32.DLL" Alias "_DRV429_ImageMsg@20" (ByVal framenum As Short, ByVal msgnum As Short, ByVal channel As Short, ByVal handleval As Integer, ByVal addr As Short) As Short
    Public Declare Function DRV429_ImageSDITable Lib "P42W32.DLL" Alias "_DRV429_ImageSDITable@16" (ByVal labelval As Short, ByVal channel As Short, ByVal handleval As Integer, ByVal addr As Short) As Short
    Public Declare Function DRV429_In Lib "P42W32.DLL" Alias "_DRV429_In@8" (ByVal handleval As Integer, ByVal addrval As Integer) As Integer
    Public Declare Function DRV429_InAccess Lib "P42W32.DLL" Alias "_DRV429_InAccess@8" (ByVal ctrval As Integer, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_InP Lib "P42W32.DLL" Alias "_DRV429_InP@8" (ByVal addr As Integer, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_InsFilt Lib "P42W32.DLL" Alias "_DRV429_InsFilt@16" (ByVal labelval As Short, ByVal sdival As Short, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_InsMsg Lib "P42W32.DLL" Alias "_DRV429_InsMsg@20" (ByVal index As Short, ByVal msgval As Integer, ByVal gapval As Integer, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_IsOldBrd Lib "P42W32.DLL" Alias "_DRV429_IsOldBrd@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_IsRcv Lib "P42W32.DLL" Alias "_DRV429_IsRcv@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_IsXmit Lib "P42W32.DLL" Alias "_DRV429_IsXmit@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_KernBegin Lib "P42W32.DLL" Alias "_DRV429_KernBegin@24" (ByVal vxdptr As Integer, ByVal cardname As String, ByVal memval As Integer, ByVal ioval As Integer, ByVal irqval As Integer, ByVal drqval As Integer) As Integer
    Public Declare Function DRV429_KernEnd Lib "P42W32.DLL" Alias "_DRV429_KernEnd@4" (ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_KernGet Lib "P42W32.DLL" Alias "_DRV429_KernGet@12" (ByRef memptr As Integer, ByRef ioptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_KernQuick Lib "P42W32.DLL" Alias "_DRV429_KernQuick@8" (ByVal flag As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_KernStatusEx Lib "P42W32.DLL" Alias "_DRV429_KernStatusEx@16" (ByRef valueptr As Integer, ByVal typeval As Integer, ByVal index As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub DRV429_KillSeq Lib "P42W32.DLL" Alias "_DRV429_KillSeq@4" (ByVal handleval As Integer)
    Public Declare Function DRV429_Load Lib "P42W32.DLL" Alias "_DRV429_Load@8" (ByVal filename As String, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_MakePtr Lib "P42W32.DLL" Alias "_DRV429_MakePtr@8" (ByVal handleval As Integer, ByVal offval As Integer) As Integer
    Public Declare Function DRV429_MantToAscii Lib "P42W32.DLL" Alias "_DRV429_MantToAscii@12" (ByVal buf As String, ByVal mant As Integer, ByVal exp As Integer) As String
    Public Declare Sub DRV429_MarkMem Lib "P42W32.DLL" Alias "_DRV429_MarkMem@4" (ByVal handleval As Integer)
    Public Declare Function DRV429_Mask Lib "P42W32.DLL" Alias "_DRV429_Mask@8" (ByVal dataval As Integer, ByVal cntval As Integer) As Integer
    Public Declare Sub DRV429_MaxMant Lib "P42W32.DLL" Alias "_DRV429_MaxMant@8" (ByRef mant As Integer, ByRef exp As Short)
    Public Declare Function DRV429_Mod Lib "P42W32.DLL" Alias "_DRV429_Mod@8" (ByVal moda As Integer, ByVal modb As Integer) As Integer
    Public Declare Function DRV429_Mul Lib "P42W32.DLL" Alias "_DRV429_Mul@8" (ByVal mula As Integer, ByVal mulb As Integer) As Integer
    Public Declare Function DRV429_NameCmp Lib "P42W32.DLL" Alias "_DRV429_NameCmp@8" (ByVal str1 As String, ByVal str2 As String) As Short
    Public Declare Function DRV429_NameToAddr Lib "P42W32.DLL" Alias "_DRV429_NameToAddr@12" (ByVal name As String, ByVal handleval As Integer, ByVal filename As String) As Integer
    Public Declare Sub DRV429_NormalMant Lib "P42W32.DLL" Alias "_DRV429_NormalMant@8" (ByRef mant As Integer, ByRef exp As Short)
    Public Declare Function DRV429_Open Lib "P42W32.DLL" Alias "_DRV429_Open@4" (ByVal cardnum As Integer) As Integer
    Public Declare Function DRV429_OscClk Lib "P42W32.DLL" Alias "_DRV429_OscClk@8" (ByVal oscval As Short, ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_Out Lib "P42W32.DLL" Alias "_DRV429_Out@12" (ByVal handleval As Integer, ByVal addrval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_OutAccess Lib "P42W32.DLL" Alias "_DRV429_OutAccess@12" (ByVal ctrval As Integer, ByVal regval As Integer, ByVal handleval As Integer)
    Public Declare Sub DRV429_OutP Lib "P42W32.DLL" Alias "_DRV429_OutP@12" (ByVal addr As Integer, ByVal value As Integer, ByVal handleval As Integer)
    Public Declare Function DRV429_Parity Lib "P42W32.DLL" Alias "_DRV429_Parity@8" (ByVal value As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_PeekB Lib "P42W32.DLL" Alias "_DRV429_PeekB@8" (ByVal addr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_PeekL Lib "P42W32.DLL" Alias "_DRV429_PeekL@8" (ByVal addr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_PeekW Lib "P42W32.DLL" Alias "_DRV429_PeekW@8" (ByVal addr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub DRV429_PokeB Lib "P42W32.DLL" Alias "_DRV429_PokeB@12" (ByVal addr As Integer, ByVal handleval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_PokeeB Lib "P42W32.DLL" Alias "_DRV429_PokeeB@12" (ByVal addr As Integer, ByVal handleval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_PokeeL Lib "P42W32.DLL" Alias "_DRV429_PokeeL@12" (ByVal addr As Integer, ByVal handleval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_PokeeW Lib "P42W32.DLL" Alias "_DRV429_PokeeW@12" (ByVal addr As Integer, ByVal handleval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_PokeL Lib "P42W32.DLL" Alias "_DRV429_PokeL@12" (ByVal addr As Integer, ByVal handleval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_PokeW Lib "P42W32.DLL" Alias "_DRV429_PokeW@12" (ByVal addr As Integer, ByVal handleval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_Pulse Lib "P42W32.DLL" Alias "_DRV429_Pulse@4" (ByVal handleval As Integer)
    Public Declare Function DRV429_PutBCDData Lib "P42W32.DLL" Alias "_DRV429_PutBCDData@16" (ByVal msg As Integer, ByVal value As Integer, ByVal msb As Short, ByVal lsb As Short) As Integer
    Public Declare Function DRV429_PutBCDMant Lib "P42W32.DLL" Alias "_DRV429_PutBCDMant@16" (ByVal msg As Integer, ByVal value As Integer, ByVal sigdig As Short, ByVal sign As Short) As Integer
    Public Declare Function DRV429_PutBCDSign Lib "P42W32.DLL" Alias "_DRV429_PutBCDSign@8" (ByVal msg As Integer, ByVal sign As Short) As Integer
    Public Declare Function DRV429_PutBCDSSM Lib "P42W32.DLL" Alias "_DRV429_PutBCDSSM@8" (ByVal msg As Integer, ByVal value As Short) As Integer
    Public Declare Function DRV429_PutBCDVal Lib "P42W32.DLL" Alias "_DRV429_PutBCDVal@16" (ByVal buf As String, ByVal msg As Integer, ByVal sigdig As Short, ByVal resolstr As String) As Integer
    Public Declare Function DRV429_PutBNRData Lib "P42W32.DLL" Alias "_DRV429_PutBNRData@20" (ByVal msg As Integer, ByVal value As Integer, ByVal msb As Short, ByVal lsb As Short, ByVal twos As Short) As Integer
    Public Declare Function DRV429_PutBNRMant Lib "P42W32.DLL" Alias "_DRV429_PutBNRMant@16" (ByVal msg As Integer, ByVal value As Integer, ByVal sigbit As Short, ByVal twos As Short) As Integer
    Public Declare Function DRV429_PutBNRSign Lib "P42W32.DLL" Alias "_DRV429_PutBNRSign@8" (ByVal msg As Integer, ByVal sign As Short) As Integer
    Public Declare Function DRV429_PutBNRSSM Lib "P42W32.DLL" Alias "_DRV429_PutBNRSSM@8" (ByVal msg As Integer, ByVal value As Short) As Integer
    Public Declare Function DRV429_PutBNRVal Lib "P42W32.DLL" Alias "_DRV429_PutBNRVal@16" (ByVal buf As String, ByVal msg As Integer, ByVal sigbit As Short, ByVal resolstr As String) As Integer
    Public Declare Function DRV429_PutFldData Lib "P42W32.DLL" Alias "_DRV429_PutFldData@8" (ByVal msgval As Integer, ByVal dataval As Integer) As Integer
    Public Declare Function DRV429_PutFldLabel Lib "P42W32.DLL" Alias "_DRV429_PutFldLabel@8" (ByVal msgval As Integer, ByVal labelval As Integer) As Integer
    Public Declare Function DRV429_PutFldSDI Lib "P42W32.DLL" Alias "_DRV429_PutFldSDI@8" (ByVal msgval As Integer, ByVal sdival As Integer) As Integer
    Public Declare Function DRV429_PutFldValue Lib "P42W32.DLL" Alias "_DRV429_PutFldValue@16" (ByVal msgval As Integer, ByVal newval As Integer, ByVal startbit As Integer, ByVal endbit As Integer) As Integer
    Public Declare Function DRV429_RandL Lib "P42W32.DLL" Alias "_DRV429_RandL@0" () As Integer
    Public Declare Function DRV429_RdClk Lib "P42W32.DLL" Alias "_DRV429_RdClk@4" (ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_RdFreePtr Lib "P42W32.DLL" Alias "_DRV429_RdFreePtr@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_RdHeapEnd Lib "P42W32.DLL" Alias "_DRV429_RdHeapEnd@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_RdHeapStart Lib "P42W32.DLL" Alias "_DRV429_RdHeapStart@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_RdOpt Lib "P42W32.DLL" Alias "_DRV429_RdOpt@4" (ByVal handleval As Integer) As Integer
    Public Declare Sub DRV429_RdSeq Lib "P42W32.DLL" Alias "_DRV429_RdSeq@20" (ByVal handleval As Integer, ByRef bottom As Short, ByRef top As Short, ByRef tail As Short, ByRef head As Short)
    Public Declare Function DRV429_ReadB Lib "P42W32.DLL" Alias "_DRV429_ReadB@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
